--- a/Exercises/List 6/src/Makefile
+++ b/Exercises/List 6/src/Makefile
@@ -1,8 +1,14 @@
-Main: Main.o 
-	g++ Main.o -o Main
+Main: Main.o Verification.o Automaton.o
+	g++ Main.o Verification.o Automaton.o -o Main
 
 Main.o: Main.cpp
 	g++ -c Main.cpp
-	
+
+verification.o: Verification.cpp
+	g++ -c Verification.cpp
+
+Automaton.o: Automaton.cpp
+	g++ -c Automaton.cpp
+
 clean: 
 	rm *.o Main 
